--- a/proyecto-final-ecommerce-camilo-santiago-manzi-peluffo/HTML/index.html
+++ b/proyecto-final-ecommerce-camilo-santiago-manzi-peluffo/HTML/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Proyecto_PreEntrega</title>
+    <title>SellChessAr</title>
 </head>
 <body>
     <header>
@@ -25,10 +25,11 @@
         </nav>
     </div>
     <main>
-        <p> Soy el MAIN </p>
-        <section>
-            <p> Soy una section</p>
-        </section>
+        <div class="index"> 
+            <h2> Bienvenido a un proyecto de pagina ecommerce! </p>
+            <img src="../images/welcome.jpg" alt="Bienvenido!">
+            <h2> Pase a cualquiera de las secciones! </h2>
+        </div>
     </main>
     <footer>
         <p> © 2024 SellChessAr. Todos los derechos reservados </p>
