--- a/proyecto-final-ecommerce-camilo-santiago-manzi-peluffo/HTML/product.html
+++ b/proyecto-final-ecommerce-camilo-santiago-manzi-peluffo/HTML/product.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Geist+Mono:wght@100..900&family=Hubot+Sans:ital,wght@0,200..900;1,200..900&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-    <title>Proyecto_PreEntrega</title>
+    <title>SellChessAr</title>
 </head>
 <body>
     <header>
@@ -26,23 +26,23 @@
         <section class="products">
             <div class="product">
                 <img src="../images/exercises.jpg" alt="Combitanions Edition 5">
-                <h2> Libro de Ejercicios </h2>
+                <h2> Libro de Ejercicios: U$D 30 </h2>
             </div>
             <div class="product">
                 <img src="../images/opening.jpg" alt="Gane Con 1. e4">
-                <h2> Libro de Aperturas </h2>
+                <h2> Libro de Aperturas: U$D 10</h2>
             </div>
             <div class="product">
                 <img src="../images/midgame.jpg" alt="Mi Sistema Nimzowitsch">
-                <h2> Libro de Mediojuego </h2>
+                <h2> Libro de Mediojuego:  U$D 20</h2>
             </div>
             <div class="product">
                 <img src="../images/pawn-structure.jpg" alt="Tratado de Ajedrez Roberto Grau Tomo 3">
-                <h2> Libro de Estructura de Peones </h2>
+                <h2> Libro de Estructura de Peones:  U$D 40 </h2>
             </div>
             <div class="product">
                 <img src="../images/endgame.jpg" alt="Los 100 Finales Que Hay Que Saber">
-                <h2> Libro de Finales </h2>
+                <h2> Libro de Finales:  U$D 40 </h2>
             </div>
         </section>
     </main>
